# Fast-LIO2_SC-SLAM

./: .gitattributes  Output.md  PriorKnowledge.md  README.md  todoList.md
output/2020-09-16-quick-shack_bag/: odom_poses.txt  optimized_poses.txt  times.txt
output/2020-09-16-quick-shack_bag/Scans/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  000005.pcd  000006.pcd  000007.pcd  000008.pcd  000009.pcd  000010.pcd  000011.pcd  000012.pcd  000013.pcd  000014.pcd  000015.pcd  000016.pcd  000017.pcd  000018.pcd  000019.pcd  000020.pcd  000021.pcd  000022.pcd  000023.pcd  000024.pcd  000025.pcd  000026.pcd  000027.pcd  000028.pcd  000029.pcd  000030.pcd  000031.pcd  000032.pcd  000033.pcd  000034.pcd  000035.pcd  000036.pcd  000037.pcd  000038.pcd  000039.pcd  (+201 more)
output/HKU_1_bag/: odom_poses.txt  optimized_poses.txt  times.txt
output/HKU_1_bag/Scans/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  000005.pcd  000006.pcd  000007.pcd  000008.pcd  000009.pcd  000010.pcd  000011.pcd  000012.pcd  000013.pcd  000014.pcd  000015.pcd  000016.pcd  000017.pcd  000018.pcd  000019.pcd  000020.pcd  000021.pcd  000022.pcd  000023.pcd  000024.pcd  000025.pcd  000026.pcd  000027.pcd  000028.pcd  000029.pcd  000030.pcd  000031.pcd  000032.pcd  000033.pcd  000034.pcd  000035.pcd  000036.pcd  000037.pcd  000038.pcd  000039.pcd  (+274 more)
output/HKU_2_bag/: odom_poses.txt  optimized_poses.txt  times.txt
output/HKU_2_bag/Scans/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  000005.pcd  000006.pcd  000007.pcd  000008.pcd  000009.pcd  000010.pcd  000011.pcd  000012.pcd  000013.pcd  000014.pcd  000015.pcd  000016.pcd  000017.pcd  000018.pcd  000019.pcd  000020.pcd  000021.pcd  000022.pcd  000023.pcd  000024.pcd  000025.pcd  000026.pcd  000027.pcd  000028.pcd  000029.pcd  000030.pcd  000031.pcd  000032.pcd  000033.pcd  000034.pcd  000035.pcd  000036.pcd  000037.pcd  000038.pcd  000039.pcd  (+226 more)
output/HKU_MB_2020-09-20-13-34-51_bag/: combined_map_with_path.ply  odom_poses.txt  optimized_poses.txt  times.txt
output/HKU_MB_2020-09-20-13-34-51_bag/Scans/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  000005.pcd  000006.pcd  000007.pcd  000008.pcd  000009.pcd  000010.pcd  000011.pcd  000012.pcd  000013.pcd  000014.pcd  000015.pcd  000016.pcd  000017.pcd  000018.pcd  000019.pcd  000020.pcd  000021.pcd  000022.pcd  000023.pcd  000024.pcd  000025.pcd  000026.pcd  000027.pcd  000028.pcd  000029.pcd  000030.pcd  000031.pcd  000032.pcd  000033.pcd  000034.pcd  000035.pcd  000036.pcd  000037.pcd  000038.pcd  000039.pcd  (+417 more)
output/Lio_sam/dcc01/: cloudCorner.pcd  trajectory.pcd  transformations.pcd
output/Lio_sam/dcc02/: cloudCorner.pcd  trajectory.pcd
output/Lio_sam/dcc03/: cloudCorner.pcd  trajectory.pcd  transformations.pcd
output/Lio_sam/latest/dcc01/: times.txt  trajectory.pcd  transformations.txt
output/Lio_sam/latest/dcc02/: cloudCorner.pcd  times.txt
output/Lio_sam/latest/dcc03/: times.txt  trajectory.pcd
output/Lio_sam/latest/kaist02/: times.txt  trajectory.pcd
output/Lio_sam/latest/kaist03/: times.txt  trajectory.pcd  transformations.txt
output/Lio_sam/riverside02/: cloudCorner.pcd  trajectory.pcd
output/new_Riverside02_bag_281/: odom_poses.txt  optimized_poses.txt  times.txt
output/new_Riverside02_bag_281/Scans/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  000005.pcd  000006.pcd  000007.pcd  000008.pcd  000009.pcd  000010.pcd  000011.pcd  000012.pcd  000013.pcd  000014.pcd  000015.pcd  000016.pcd  000017.pcd  000018.pcd  000019.pcd  000020.pcd  000021.pcd  000022.pcd  000023.pcd  000024.pcd  000025.pcd  000026.pcd  000027.pcd  000028.pcd  000029.pcd  000030.pcd  000031.pcd  000032.pcd  000033.pcd  000034.pcd  000035.pcd  000036.pcd  000037.pcd  000038.pcd  000039.pcd  (+241 more)
output/new_Riverside02_bag_331/: combined_map_with_path.ply  odom_poses.txt  optimized_poses.txt  times.txt
output/new_Riverside02_bag_331/Scans/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  000005.pcd  000006.pcd  000007.pcd  000008.pcd  000009.pcd  000010.pcd  000011.pcd  000012.pcd  000013.pcd  000014.pcd  000015.pcd  000016.pcd  000017.pcd  000018.pcd  000019.pcd  000020.pcd  000021.pcd  000022.pcd  000023.pcd  000024.pcd  000025.pcd  000026.pcd  000027.pcd  000028.pcd  000029.pcd  000030.pcd  000031.pcd  000032.pcd  000033.pcd  000034.pcd  000035.pcd  000036.pcd  000037.pcd  000038.pcd  000039.pcd  (+292 more)
refs/MulRan_dataset/: interpolation.py  lio_sam_convert.py  mytest.py
refs/MulRan_dataset/mytest/0_281_frame/: kitti_ground_truth.txt  tum_optimized_poses.txt
refs/MulRan_dataset/mytest/DCC01/: DCC01.md  odom_poses.txt  times.txt
refs/MulRan_dataset/mytest/DCC02/: DCC02.md  odom_poses_tum.txt  times.txt  trajectory_tum.txt
refs/MulRan_dataset/mytest/DCC03/: DCC03.md  odom_poses.txt  optimized_poses.txt  times.txt
refs/MulRan_dataset/mytest/KAIST02/: cmd.md  odom_poses.txt  odom_poses_tum.txt  optimized_poses.txt  times.txt
refs/MulRan_dataset/mytest/KAIST03/: KAIST03.md  odom_poses.txt  optimized_poses.txt  trajectory_tum.txt
refs/examples/2020-09-16-quick-shack.bag/: metadata.yaml
refs/examples/HKU_MB_2020-09-20-13-34-51.bag/: metadata.yaml
refs/exp-imgs/exps/Errors/: APE.xlsx  RPE.xlsx
ros_ws/src/FAST_LIO/launch/: launcher.py  mapping_ouster64.launch
ros_ws/src/FAST_LIO/src/: laserMapping.cpp
ros_ws/src/LIO-SAM/: CMakeLists.txt  my_test.md
ros_ws/src/aloam_velodyne/: CMakeLists.txt  package.xml
ros_ws/src/aloam_velodyne/launch/: fastlio_ouster64.launch  launcher.py
ros_ws/src/aloam_velodyne/src/: kittiHelper.cpp  laserMapping.cpp  laserOdometry.cpp  laserPosegraphOptimization.cpp  scanRegistration.cpp
ros_ws/src/aloam_velodyne/utils/python/: convert_poses_TUM.py  draw_3D_image.py  makeMergedMap.py  myViewer.py  show_gt_map.py
ros_ws/src/livox_lidar_converter/: CMakeLists.txt  package.xml
ros_ws/src/mulran_converter/: CMakeLists.txt  README.md  package.xml
ros_ws/src/mulran_converter/launch/: convert.launch.py
ros_ws/src/mulran_converter/src/: mulran_converter.cpp  mytest.cpp
(+49 files in other folders)
