<?xml version="1.0"?>
<package format="2">
  <name>mulran_converter</name>
  <version>0.1.0</version>
  <description>Mulran to ROS2 bag converter</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>livox_ros_driver2</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>Eigen3</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag2_cpp</depend>

  <exec_depend>OpenCV</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
